<resources>
    <string name="app_name">Hyper-Math</string>

    <string name="title_home">首页</string>
    <string name="title_learning">学习</string>
    <string name="title_reading">目录</string>
    <string name="title_more">更多</string>
    <string name="title_toybox">学习</string>
    <string name="title_notifications">通知</string>
    <string name="title_night_mode">夜间模式</string>
    <string name="title_settings">设置</string>
    <string name="title_theme">主题</string>
    <string name="title_note">笔记</string>
    <string name="title_goto">搜索</string>
    <string name="title_collection">收藏</string>
    <string name="title_history">历史</string>
    <string name="title_search">搜索</string>
    <string name="title_exit">退出</string>
    <string name="title_feedback">建议与反馈</string>
    <string name="title_star">给个好评？</string>
    <string name="title_share">分享</string>
    <string name="title_about">关于...</string>

    <!-- 通用表意文本 -->
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="downloading">下载</string>
    <string name="download">下载</string>
    <string name="update">更新</string>
    <string name="update_already_latest">已经是最新本</string>
    <string name="gotoo">转到</string>
    <string name="close">关闭</string>
    <string name="notification_test">This is a test string!</string>

    <string name="default_local_index_path">files:///sdcard/MathWiki/index.html</string>

    <string name="plugin_mathjax">Mathjax公式插件</string>
    <string name="plugin_bootstrap">Bootstrap主题插件</string>
    <string name="plugin_main_data">主数据包</string>

    <string name="app_website">http://mathwiki.work</string>
    <string name="press_again_to_exit">再次点击退出~</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">设置</string>
    <string name="title_activity_main">Hyper-Math</string>
    <string name="title_activity_settings">设置</string>
    <string name="title_activity_collectings">收藏</string>

    <!-- Strings related to Settings -->`
    <string name="permission_apply">权限申请</string>
    <string-array name="permissions_notation">
        <item>需要读取存储卡数据。</item>
        <item>我们需要写入存储卡数据。</item>
        <item>获取您的唯一标识信息能帮助我们提升用户体验，这不是必选项。</item>
    </string-array>

    <string-array name="items_more">
        <item>收藏</item>
        <item>关于</item>
        <item>退出</item>
    </string-array>

    <string-array name="settings_items">
        <item>General_First_Welcome_Splash_Showed</item>
        <item>General_Allow_Download_via_Mobile</item>
        <item>Markdown_Editor_Auto_Changeline</item>
        <item>Markdown_Editor_Highlight_Level</item>
        <item>Markdown_Editor_AutoComplete</item>
        <item>Markdwon_Editor_Space_Indent</item>
    </string-array>

    <string name="title_activity_welcome_guide">改变你的学习方式 ！</string>


    <!-- 设置 -->
    <string name="settings_category_general">通用设置</string>
    <string name="settings_general_allow_mobile_download">允许使用流量更新</string>
    <string name="settings_general_auto_update">自动更新数据</string>

    <!-- 关于 -->
    <string name="settings_about_version">Version: %s</string>
    <string name="settings_about_version_desc">检查更新…</string>

    <string name="settings_category_notification">通知</string>
    <string name="settings_notification_messages">允许消息推送</string>
    <string name="settings_notification_push">允许推荐推送</string>

    <string name="settings_category_stylish">个性化</string>

    <string name="settings_category_others">其他..</string>

    <string name="settings_others_debug">调试模式</string>
    <string name="settings_others_update">检查更新</string>
    <string name="settings_others_about">关于..</string>

    <string name="dialog_update_button_ok">好，快更</string>
    <string name="dialog_update_button_no">不更新</string>
    <string name="dialog_update_button_no_more">忽略此版本</string>

    <string name="content_start">继续学习...</string>
    <string name="content_context">首页</string>
    <string name="content_limit">极限与连续</string>
    <string name="content_differential">导数与微分</string>
    <string name="content_differential_multivariable">多元函数微分</string>
    <string name="content_differential_equation">微分方程</string>
    <string name="content_integration">积分</string>
    <string name="content_integration_definite">定积分</string>
    <string name="content_integration_indefinite">不定积分</string>
    <string name="content_integration_multivariable">多重积分</string>
    <string name="content_integration_vector">向量积分</string>
    <string name="content_integration_tips">积分技巧</string>
    <string name="content_geometry">空间解析几何及向量代数</string>
    <string name="content_infinite_series">无穷级数</string>
    <string name="content_formula">常用公式</string>
    <string name="content_alphaset">常用符号</string>
    <string name="content_about">关于项目</string>

    <!-- 我的 页面 -->
    <string name="mine_login">点击此处登陆</string>



    <!-- 通知类 -->
    <string name="copy_success">复制成功</string>
    <string name="you_have_unread_messages">你有%s条未读消息</string>
    <string name="mention_count">\@我[%s] </string>
    <string name="letter_count">私信[%s] </string>
    <string name="review_count">评论[%s] </string>
    <string name="fans_count">新粉丝[%s] </string>
    <string name="like_count">收到赞[%s] </string>

    <!-- 登陆界面 -->
    <string name="login_input_username_hint">手机号或邮箱</string>
    <string name="login_input_username_hint_error">请输入正确的手机号或邮箱&#8230;</string>
    <string name="login_hold_hint">记住密码</string>
    <string name="login_forget_hint">忘记密码？</string>
    <string name="login_register_hint">注册</string>
    <string name="login_other_hint">其他方式登录</string>
    <string name="register_input_username_hint">手机号</string>
    <string name="register_username_hint">用户名</string>
    <string name="register_sms_auth_code">短信验证码</string>
    <string name="register_sms_hint">获取验证码</string>
    <string name="register_sms_wait_hint">别激动,休息一下呗&#8230;</string>
    <string name="loading_image">正在准备图片...</string>
    <string name="register_done_hint">完成</string>
    <string name="register_man_hint">男士</string>
    <string name="register_female_hint">女士</string>
    <string name="retrieve_pwd_step_hint">下一步</string>
    <string name="retrieve_pwd_email_label_one">邮箱用户找回密码，请</string>
    <string name="retrieve_pwd_email_label"><a>点击这里</a></string>
    <string name="reset_pwd_hint">请输入至少六位新密码</string>
    <string name="register_username_error">用户名太长&#8230;</string>
    <string name="hint_password">密码</string>
    <string name="register_pwd_hint">请输入至少六位数密码</string>
    <string name="hint_username_ok">请输入正确的手机号码</string>
    <string name="user_hint_login">点击头像登录</string>
    <string name="reset_pwd_label">重置密码</string>
    <string name="retrieve_pwd_label">找回密码</string>
    <string name="reset_pwd_submit">确认</string>
    <string name="request_error_hint">网络请求失败,请重试&#8230;</string>
    <string name="login_success_hint">登录成功</string>
    <string name="send_sms_code_success_hint">已成功发送验证码</string>
    <string name="reset_success_hint">密码重置成功</string>
    <string name="register_success_hint">注册成功</string>
    <string name="share_hint">抱歉,您未安装该应用,不能分享&#8230;</string>
    <string name="login_hint">抱歉,您未安装该应用,不能登录&#8230;</string>
    <string name="login_wechat_hint">正在启动微信中&#8230;</string>
    <string name="login_tencent_hint">正在启动QQ中&#8230;</string>
    <string name="login_weibo_hint">正在启动微博中&#8230;</string>
    <string name="message_pwd_error">密码错误</string>
    <string name="message_username_null">用户名未填写！！！</string>
    <string name="tv_my_score">积分 0</string>
    <string name="zero">0</string>

    <!-- Error View -->
    <string name="error_view_no_data">暂无内容</string>
    <string name="error_view_loading">加载中…</string>
    <string name="error_view_loading_friend">数据初始化中…</string>
    <string name="error_view_loading_local_friend">获取附近的程序员中…</string>
    <string name="error_view_load_error_click_to_refresh">内容加载失败\r\n点击重新加载</string>
    <string name="error_view_network_error_click_to_refresh">没有可用的网络</string>
    <string name="tip_network_error">没有可用的网络</string>

    <string name="unlogin_tip">您还未登录\r\n或网络延迟</string>

    <!-- Media Related -->
    <string name="gallery_save_file_not_have_external_storage_permission">没有外部存储权限!</string>
    <string name="gallery_save_file_not_have_external_storage">没有外部存储!</string>
    <string name="gallery_save_file_success">保存成功!</string>
    <string name="gallery_save_file_failed">存储失败!</string>
    <string name="image_select_opt_done">完成</string>
    <string name="image_select_opt_preview">预览</string>

    <!-- States -->
    <string name="state_network_error">网络错误</string>
    <string name="state_loading">正在加载…</string>
    <string name="state_not_more">没有更多数据</string>
    <string name="state_load_error">加载失败</string>
    <string name="state_refreshing">正在刷新</string>
    <string name="state_load">正在加载…</string>
    <string name="state_loading_error">数据加载中&#8230;</string>
    <string name="state_submit">正在提交中&#8230;</string>

    <!-- 分享 -->
    <string name="share_to">分享</string>
    <string name="platform_sina">微博</string>
    <string name="platform_wechat_circle">朋友圈</string>
    <string name="platform_wechat">微信</string>
    <string name="platform_qq">QQ</string>
    <string name="platform_tweet">动弹</string>
    <string name="platform_browser">浏览器</string>
    <string name="platform_copy_link">复制链接</string>
    <string name="platform_picture">长图分享</string>
    <string name="platform_more_option">更多</string>
    <string name="platform_download">保存图片</string>
    <string name="platform_preview">预览</string>

</resources>
