<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/title_home" />
        <item
            android:id="@+id/nav_context"
            android:icon="@drawable/ic_menu_context"
            android:title="@string/title_context" />
        <item
            android:id="@+id/nav_toybox"
            android:icon="@drawable/ic_toys"
            android:title="@string/title_toybox" />
        <item
            android:id="@+id/nav_collection"
            android:icon="@drawable/ic_collections"
            android:title="@string/title_collection" />
    </group>

    <item android:title="Communicate"
        android:tooltipText=""
        android:iconTint="@color/selector_tab_item">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:iconTint="@color/colorAccent"
                android:title="@string/title_settings" />
            <item
                android:id="@+id/nav_goto"
                android:icon="@drawable/ic_menu_send"
                android:iconTint="@color/colorAccent"
                android:title="@string/title_goto" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:iconTint="@color/colorAccent"
                android:title="@string/title_share" />
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_clear"
                android:iconTint="@color/colorAccent"
                android:title="@string/title_exit" />
        </menu>
    </item>

</menu>
