<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.v7.widget.GridLayout
        android:id="@+id/layout_main_grid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:useDefaultMargins="true"
        app:columnCount="5"
        app:alignmentMode="alignMargins">

        <LinearLayout
            android:id="@+id/layout_main_grid_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_row="0"
            app:layout_column="0"
            app:layout_columnSpan="4"
            app:layout_columnWeight="5"
            android:weightSum="5"
            android:gravity="center_horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_book" />
            <TextView
                android:text="@string/content_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_main_grid_context"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_row="1"
            app:layout_column="0"
            app:layout_columnWeight="1"
            android:weightSum="5"
            android:gravity="center_horizontal">
            <ImageView
                android:src="@drawable/ic_menu_context"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/content_context"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_main_grid_limit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_row="1"
            app:layout_columnSpan="3"
            app:layout_column="1"
            app:layout_columnWeight="4"
            android:weightSum="5"
            android:gravity="center_horizontal">
            <ImageView
                android:src="@drawable/ic_menu_context"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/content_limit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_main_grid_differential"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_row="2"
            app:layout_column="0"
            app:layout_columnSpan="5"
            android:gravity="center_horizontal">
            <ImageView
                android:src="@drawable/ic_menu_context"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/content_differential"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/layout_main_grid_differential_multivariable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_row="3"
            app:layout_column="0"
            app:layout_columnWeight="1"
            android:weightSum="5"
            android:gravity="center_horizontal">
            <ImageView
                android:src="@drawable/ic_menu_context"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/content_differential_multivariable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_main_grid_differential_equation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_row="3"
            app:layout_column="1"
            app:layout_columnSpan="4"
            app:layout_columnWeight="4"
            android:weightSum="5"
            android:gravity="center_horizontal">
            <ImageView
                android:src="@drawable/ic_menu_context"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/content_differential_equation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </android.support.v7.widget.GridLayout>
</android.support.constraint.ConstraintLayout>