<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_toolbar_height">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_toolbar_height">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/icon"
                android:src="@drawable/ic_info"
                android:layout_width="@dimen/default_icon_mini"
                android:layout_height="@dimen/default_icon_mini"
                android:layout_centerVertical="true"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/title"
                android:textSize="@dimen/text_size_title"
                android:textStyle="bold"
                android:textColor="@color/text_black_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/icon"
                android:layout_marginLeft="6dp"/>

            <ImageView
                android:id="@+id/close"
                android:src="@drawable/ic_clear"
                android:tint="@color/red"
                android:layout_width="@dimen/default_icon_mini"
                android:layout_height="@dimen/default_icon_mini"
                android:layout_marginRight="@dimen/default_margin_medium"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true" />
        </RelativeLayout>

    </android.support.v7.widget.Toolbar>
    <View
        android:id="@+id/dialog_app_update_devider_line1"
        android:background="@color/dropdown_divider_color"
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_line_height_normal"
        android:layout_below="@+id/toolbar"/>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/text"
        android:textColor="@color/text_black_light"
        android:layout_margin="@dimen/default_margin_large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/toolbar"
        android:layout_alignRight="@id/toolbar"
        android:minHeight="@dimen/dialog_content_min_height"
        android:layout_below="@+id/dialog_app_update_devider_line1"/>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/button_ok"
        android:theme="@style/AppTheme.AppCompatTextButton"
        android:text="@string/dialog_update_button_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text"
        android:layout_toLeftOf="@+id/button_no"
        android:layout_margin="@dimen/default_margin_large"/>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/button_no"
        android:text="@string/dialog_update_button_no"
        android:theme="@style/AppTheme.AppCompatTextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin_large"
        android:layout_marginLeft="0dp"
        android:layout_below="@+id/text"
        android:layout_alignParentRight="true"/>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/button_nomore"
        android:text="@string/dialog_update_button_no_more"
        android:theme="@style/AppTheme.AppCompatTextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin_large"
        android:layout_below="@+id/text"
        android:layout_alignParentLeft="true"/>

</RelativeLayout>